translates to 34/210 pages

--- a/preamble.tex
+++ b/preamble.tex
@@ -92,6 +92,8 @@
 \newcommand\while{\texttt{while}}
 \newcommand\for{\texttt{for}}
 \newcommand\patact{\ \mbox{模式}\mbox{--}动作\ }
+\newcommand\break{\texttt{break}}
+\newcommand\ctn{\texttt{continue}}
 
 \title{AWK 程序设计语言}
 \author{Alfred V.Aho \and Brian W.Kernighan \and Peter J.Weinberger \and
