--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -95,21 +95,21 @@
 模式控制动作的执行. 这一小节描述模式的6种类型, 以及匹配它们的条件.
 \begin{summary}{模式汇总}
     \begin{enumerate}
-        \item \BEGIN \verb'{' \stmt \verb'}' \\
+        \item \BEGIN \verb'{' \stmt \verb'}' \par
             在输入被读取之前, \stmt 被执行一次.
-        \item \END \verb'{' \stmt \verb'}'      \\
+        \item \END \verb'{' \stmt \verb'}'      \par
             当所有输入被读取完毕之后, \stmt 被执行一次.
-        \item \expr \verb'{' \stmt \verb'}' \\
+        \item \expr \verb'{' \stmt \verb'}' \par
             每碰到一个使 \expr 为真的输入行, \stmt 就被执行. \expr 为真指
             的是其值非零或非空.
-        \item \verb'/'\regexpr\verb'/' \verb'{' \\
+        \item \verb'/'\regexpr\verb'/' \verb'{' \par
             \stmt \verb'}'
             当碰到这样一个输入行时, \stmt 就被执行: 输入行含有一段字符串,
             而该字符串可以被 \regexpr 匹配.
-        \item \textit{compound pattern} \verb'{' \stmt \verb'}' \\
+        \item \textit{compound pattern} \verb'{' \stmt \verb'}' \par
             一个复合模式将表达式用 \AND{}(AND), \OR{}(OR), \NOT{}(NOT), 以及
             括号组合起来; 当 \textit{compound pattern} 为真时, \stmt 执行.
-        \item \pat$_1$\verb',' \pat$_2$ \verb'{' \stmt{}\verb'}' \\
+        \item \pat$_1$\verb',' \pat$_2$ \verb'{' \stmt{}\verb'}' \par
             一个范围模式匹配多个输入行, 这些输入行从匹配 \pat$_1$ 的行开始,
             到匹配 \pat$_2$ 的行结束, 包括这两行; 对这其中的每一行执行
             \stmt.
@@ -292,13 +292,13 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 \marginpar{27}
 \begin{summary}{字符串匹配模式}
     \begin{enumerate}
-        \item \verb'/'\textit{regexpr}\verb'/' \\
+        \item \verb'/'\textit{regexpr}\verb'/' \par
             当当前输入行包含一段能够被 \textit{regexpr} 匹配的子字符串时,
             该模式被匹配.
-        \item \regexpr {} \verb'~' \verb'/'\textit{regexpr}\verb'/' \\
+        \item \regexpr {} \verb'~' \verb'/'\textit{regexpr}\verb'/' \par
             如果 \expr 的字符串值包含一段能够被 \textit{regexpr} 匹配的子
             字符时, 该模式被匹配.
-        \item \expr {} \verb'!~' \verb'/'\textit{regexpr}\verb'/' \\
+        \item \expr {} \verb'!~' \verb'/'\textit{regexpr}\verb'/' \par
             如果 \expr 的字符串值不包含能够被 \textit{regexpr} 匹配的子字
             符串, 该模式被匹配.
     \end{enumerate}
@@ -355,25 +355,25 @@ shell. 受限形式的正则表达式也出现在其他系统中, 在 MS-DOS 中
 为了理解被一个正则表达式匹配的字符串, 我们需要先了解被子表达式匹配的字符串.
 \begin{summary}{正则表达式}
 \begin{enumerate}
-\item 正则表达式的元字符包括: \\
+\item 正则表达式的元字符包括: \par
     \verb'\ ^ $ . [ ] | ( ) * + ?'
-\item 一个基本的表达式包括下面几种: \\
-    一个不是元字符的字符, 例如 \verb'A', 这个正则表达式匹配的就是它本身. \\
+\item 一个基本的表达式包括下面几种: \par
+    一个不是元字符的字符, 例如 \verb'A', 这个正则表达式匹配的就是它本身. \par
     一个匹配特殊符号的转义字符: \verb'\t' 匹配一个制表符 (见表
-    \ref{tbl:escape_sequence}). \\
-    一个被引述的元字符, 例如 \verb'\*', 按字面意义匹配元字符. \\
-    \verb'^' 匹配一行的开始. \\
-    \verb'$' 匹配一行的结束. \\
-    \verb'.' 匹配任意一个字符. \\
-    一个字符集合: \verb'[ABC]' 匹配字符 \verb'A', \verb'B' 或 \verb'C'. \\
-    字符集合可能包含缩写形式: \verb'[A-Za-z]' 匹配单个字母. \\
+    \ref{tbl:escape_sequence}). \par
+    一个被引述的元字符, 例如 \verb'\*', 按字面意义匹配元字符. \par
+    \verb'^' 匹配一行的开始. \par
+    \verb'$' 匹配一行的结束. \par
+    \verb'.' 匹配任意一个字符. \par
+    一个字符集合: \verb'[ABC]' 匹配字符 \verb'A', \verb'B' 或 \verb'C'. \par
+    字符集合可能包含缩写形式: \verb'[A-Za-z]' 匹配单个字母. \par
     一个互补的字母集合: \verb'[^0-9]' 匹配任意一个字符, 但是除了数字.
-\item 这些运算符将正则表达式组合起来:
-    选择: \verb'A|B' 匹配 \verb'A' 或 \verb'B'. \\
-    连接: \verb'AB' 匹配后面紧跟着 \verb'B' 的 \verb'A'. \\
-    闭包: \verb'A*' 匹配0个或多个 \verb'A'. \\
-    正闭包: \verb'A+' 匹配一个或多个 \verb'A'. \\
-    零或一: \verb'A?' 匹配空字符串或 \verb'A'. \\
+\item 这些运算符将正则表达式组合起来:   \par
+    选择: \verb'A|B' 匹配 \verb'A' 或 \verb'B'. \par
+    连接: \verb'AB' 匹配后面紧跟着 \verb'B' 的 \verb'A'. \par
+    闭包: \verb'A*' 匹配0个或多个 \verb'A'. \par
+    正闭包: \verb'A+' 匹配一个或多个 \verb'A'. \par
+    零或一: \verb'A?' 匹配空字符串或 \verb'A'. \par
     括号: \verb'('\textit{r}\verb')' 匹配与 \textit{r} 相同的字符串.
 \end{enumerate}
 \end{summary}
@@ -485,22 +485,22 @@ Awk 不存在显式的连接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
 \textit{r} 匹配的子字符串, 那么模式 \verb'/'\textit{r}\verb'/'
 匹配成功.
 \begin{enumerate}
-\item \verb'^[0-9]+$/' \\
-    匹配含有且只含有数字的输入行.
-\item \verb'^[0-9][0-9][0-9]$/' \\
-    输入行有且仅有3个数字.
-\item \verb'^(\+|-)?[0-9]+\.?[0-9]*$/' \\
-    十进制小数, 符号与小数部分是可选的.
-\item \verb'^[+-]?[0-9]+[.]?[0-9]*$/' \\
-    也是匹配十进制小数, 带有可选的符号与小数部分.
-\item \verb'^[+-]?([0-9]+[.]?[0-9]*|[.][0-9]+)([eE][+-]?[0-9]+)?$/' \\
-    浮点数, 符号与指数部分是可选的.
-\item \verb'^[A-Za-z][A-Za-z0-9]*$/' \\
-    一个字母, 后面再跟着任意多个字母或数字 (比如 awk 的变量名).
-\item \verb'^[A-Za-z]$|^[A-Za-z][0-9]$/' \\
-    一个字母, 又或者是一个后面跟着一个数字的字母 (比如 Basic 的变量名).
-\item \verb'^[A-Za-z][0-9]?$/' \\
-    同样是一个字母, 又或者是一个后面跟着一个数字的字母.
+\item[] \verb'^[0-9]+$/' \par
+    \qquad 匹配含有且只含有数字的输入行.
+\item[] \verb'^[0-9][0-9][0-9]$/' \par
+    \qquad 输入行有且仅有3个数字.
+\item[] \verb'^(\+|-)?[0-9]+\.?[0-9]*$/' \par
+    \qquad 十进制小数, 符号与小数部分是可选的.
+\item[] \verb'^[+-]?[0-9]+[.]?[0-9]*$/' \par
+    \qquad 也是匹配十进制小数, 带有可选的符号与小数部分.
+\item[] \verb'^[+-]?([0-9]+[.]?[0-9]*|[.][0-9]+)([eE][+-]?[0-9]+)?$/' \par
+    \qquad 浮点数, 符号与指数部分是可选的.
+\item[] \verb'^[A-Za-z][A-Za-z0-9]*$/' \par
+    \qquad 一个字母, 后面再跟着任意多个字母或数字 (比如 awk 的变量名).
+\item[] \verb'^[A-Za-z]$|^[A-Za-z][0-9]$/' \par
+    \qquad 一个字母, 又或者是一个后面跟着一个数字的字母 (比如 Basic 的变量名).
+\item[] \verb'^[A-Za-z][0-9]?$/' \par
+    \qquad 同样是一个字母, 又或者是一个后面跟着一个数字的字母.
 \end{enumerate}
 在第3个例子中, 为了匹配元字符\verb'+' 与 \verb'-' 的字面值, 必须在它们的
 前面加上反斜线, 而在字符集合中则不需要, 所以第 3 项与 第 4 项的功能是等价
@@ -681,8 +681,10 @@ England 94      56      Europe
 表 \ref{tbl:patterns} 总结了可以出现在 \patact 语句中的模式种类.
 \begin{figure}[ht]
 \begin{center}
+\captionsetup{type=table}
 \caption{模式}
 \label{tbl:patterns}
+% TODO: 表格过长
 \begin{tabular}{c|c|l}
     \hline
     \hline
@@ -710,17 +712,17 @@ England 94      56      Europe
 \begin{summary}{动作}
     动作中的语句可以包括:
     \begin{itemize}
-\item     \expr, 包括常量, 变量, 赋值, 函数调用等等.
-\item     \print\ \textit{expression-list}
-\item     \printf\verb'('\fmt\verb', '\textit{expression-list}\verb')'
-\item     \verb'if ('\expr\verb')' \stmt
-\item     \verb'if ('\expr\verb')' \stmt\ \verb'else '\stmt
-\item     \verb'while ('\expr\verb') '\stmt
-\item     \verb'for ('\expr\verb'; '\expr\verb'; '\expr\verb') '\stmt
-\item     \verb'for ('\expr\verb' in '\textit{array}\verb')' \stmt
-\item     \verb'do '\stmt\ \verb'while ('\expr\verb')'
-\item     \break
-\item     \ctn
+\item[]     \expr, 包括常量, 变量, 赋值, 函数调用等等.
+\item[]     \print\ \textit{expression-list}
+\item[]     \printf\verb'('\fmt\verb', '\textit{expression-list}\verb')'
+\item[]     \verb'if ('\expr\verb')' \stmt
+\item[]     \verb'if ('\expr\verb')' \stmt\ \verb'else '\stmt
+\item[]     \verb'while ('\expr\verb') '\stmt
+\item[]     \verb'for ('\expr\verb'; '\expr\verb'; '\expr\verb') '\stmt
+\item[]     \verb'for ('\expr\verb' in '\textit{array}\verb')' \stmt
+\item[]     \verb'do '\stmt\ \verb'while ('\expr\verb')'
+\item[]     \break
+\item[]     \ctn
     \end{itemize}
 \end{summary}
 
