为过长的单元格断行, 通过固定单元格的列宽度

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -685,7 +685,7 @@ England 94      56      Europe
 \caption{模式}
 \label{tbl:patterns}
 % TODO: 表格过长
-\begin{tabular}{c|c|l}
+\begin{tabular}{c|c|p{18em}}
     \hline
     \hline
     模式        & 例子      & \multicolumn{1}{c}{匹配}  \\
