syntax right to 37/210 pages

--- a/preamble.tex
+++ b/preamble.tex
@@ -102,6 +102,7 @@
 \newcommand\regexpr{\textit{regular expression}}
 \newcommand\pat{\textit{pattern}}
 \newcommand\fs{\texttt{FS}}
+\newcommand\OFS{\texttt{OFS}}
 \renewcommand\break{\texttt{break}}
 \newcommand\ctn{\texttt{continue}}
 \newcommand\fmt{\textit{format}}
