--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -805,7 +805,7 @@ England	94	56	Europe
 字段也可以通过表达式指定. 例如, \verb'$(NF-1)' 表示当前输入行的倒数第 2 个
 字段. 表达式两边的括号不能省略: \verb'$NF-1' 表示最后一个字段减一后的值.
 
-如果字段变量引用到了不存在的字段, 例如 \verb'$(NF+1), 那么它的值就是初始
+如果字段变量引用到了不存在的字段, 例如 \verb'$(NF+1)', 那么它的值就是初始
 值 -- 空字符串. 可以通过向一个字段变量赋值来创建它. 例如, 下面这个程序创建
 了第 5 个字段, 该字段包含的值是人口密度:
 \begin{awkcode}
