review stop at 38/210 pages

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -910,7 +910,7 @@ England 94      56      Europe
     Total population of the 4 Asian countries is 2173 million.
 \end{file}
 第一个动作含有两个赋值语句, 第一个累积人口, 第二个计算国家的数量. 变量没有
-被显式地初始化, 但程序仍然按照期望得那样运行, 这是因为每个变量会默认初始为
+被显式地初始化, 但程序仍然按照期望得那样运行, 这是因为每个变量都会默认初始为
 空字符串 \verb'""' 或数值 0.
 
 在下面这个程序里, 我们仍然利用了默认的初始化行为, 程序的功能是寻找拥有最
@@ -934,7 +934,7 @@ England 94      56      Europe
 \begin{awkcode}
     pop += $3
 \end{awkcode}
-紧凑形式的表达式与冗长版本具有相同的作用 --- 左值加上右值, 并赋给左值 ---
+紧凑版与冗长版具有相同的作用 --- 左值加上右值, 并赋给左值 ---
 但是 \verb'+=' 更简短, 运行起来也更快. 再看另外一个例子:
 \begin{awkcode}
     { $2 /= 1000; print }
