get syntax right to 41/210 pages

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -972,7 +972,7 @@ England	94	56	Europe
 \end{figure}
 \end{center}
 
-可以用这些函数来得到一些有用的常量: \verb'atan2(0,-1)' 得到 \pi,
+可以用这些函数来得到一些有用的常量: \verb'atan2(0,-1)' 得到 $\pi$,
 \verb'exp(1)' 返回 $e$ --- 自然对数的底. 为了计算 \textit{x} 的以 10 为底
 的对数, 我们可以用 \verb'log('\textit{x}\verb')/log(10)' 来实现.
 
