\le 命令需在数学环境中使用

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -991,7 +991,7 @@ England 94      56      Europe
         \textit{x} 大于 0 时, 向 0 取整 \\
         \verb'log('\textit{x}\verb')'   & \textit{x} 的自然对数 (以 $e$ 为
         底)  \\
-        \verb'rand()'   & 返回一个随机数 \textit{r}, 0 \le \textit{r}
+        \verb'rand()'   & 返回一个随机数 \textit{r}, 0 $\le$ \textit{r}
         < 1 \\
         \verb'sin('\textit{x}\verb')'   & \textit{x} 的正弦值, \textit{x}
         以弧度为单位.   \\
