--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -1096,13 +1096,14 @@ England 94      56      Europe
 了的). \textit{s} 与 \textit{t} 是字符串表达式, \textit{n} 与 \textit{p}
 是整数.
 \begin{figure}[ht]
+    \captionsetup{type=table}
     \caption{内建字符串函数}
     \label{tbl:built_in_string_functions}
     \begin{center}
-        \begin{tabular}{l|l}
+        \begin{tabular}{l|p{25em}}
             \hline
             \hline
-            函数    & 描述  \\
+            \multicolumn{1}{c}{函数}    & \multicolumn{1}{c}{描述}  \\
             \hline
             \verb'gsub('\textit{r}\verb','\textit{s}\verb')' &  将
             \verb'$0' 中所有出现的 \textit{r} 替换为 \textit{s}, 返回
@@ -1125,7 +1126,7 @@ England 94      56      Europe
             \verb')'    & 用 \textit{fs} 分割 \textit{s} 到数组 \textit{a}
             中, 返回字段的个数  \\
             \verb'sprintf('\textit{fmt}\verb','\textit{expr-list}\verb')'
-            & 根据格式字符串 \textit{fmt} 返回格式化后 \textit{expr-list}
+            & 根据格式字符串 \textit{fmt} 返回格式化后的 \textit{expr-list}
             \\
             \verb'sub('\textit{r}\verb','\textit{s}\verb')' &
             将 \verb'$0' 的最左最长的, 能被 \textit{r} 匹配的子字符串替换为
@@ -1145,7 +1146,7 @@ England 94      56      Europe
 
 函数 \verb'index('\textit{s}\verb','\textit{t}\verb')' 返回 \textit{t} 在
 \textit{s} 中第一次出现的位置; 如果 \textit{t} 没有在 \textit{s} 中出现,
-那就返回 0. 字符串的第一个字符的位置是 1:
+那就返回 0. 字符串第一个字符的位置是 1:
 \begin{awkcode}
     index("banana", "an")
 \end{awkcode}
@@ -1161,10 +1162,12 @@ England 94      56      Europe
 \textit{a} 中. 这个函数会在数组之后讨论, 也就是在这一节的末尾.
 
 \marginpar{42}
-\verb'sprintf('\fmt\verb','\expr$_1$\verb','\expr$_2$\verb','\ldots%
-\verb','\expr$_n$\verb')' 返回 (不打印) 一个字符串, 这个字符串包含格式%
+\verb'sprintf('\fmt\verb','\textit{expr}$_1$\verb','\textit{expr}$_2$\verb','\ldots%
+\verb','\textit{expr}$_n$\verb')' 返回 (不打印) 一个字符串,
+这个字符串包含格式%
 化了的
-\expr$_1$, \expr$_2$, \ldots, \expr$_n$, 格式化的依据与 \printf 的格式说
+\textit{expr}$_1$, \textit{expr}$_2$, \ldots, \textit{expr}$_n$,
+格式化的依据与 \printf 的格式说
 明符相同, \printf 的格式说明符就是 \fmt. 于是, 语句
 \begin{awkcode}
     x = sprintf("%10s %6d", $1, $2)
