--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -1339,16 +1339,17 @@ England	94	56	Europe
     \caption{表达式运算符}
     \label{tbl:expression_operators}
     \begin{center}
+        \begin{tabular}{l|l|l|l}
         \hline
         \hline
         操作    & 运算符    & 例子  & 例子的含义    \\
         \hline
         赋值    & \verb'= += -= *=' \verb'/= %= ^=' & \verb'x *= 2' &
-        \verb'x = x * 2'
+        \verb'x = x * 2' \\
         条件表达式 & \verb'?:' & \verb'x ? y : z' & 若 \verb'x' 为真, 则
         \verb'y', 否则 \verb'z' \\
         逻辑 或 & \verb'||' & \verb'x || y' & 若 \verb'x' 或 \verb'y' 为
-        真, 则为 1, 否则为 0
+        真, 则为 1, 否则为 0 \\
         逻辑 与 & \verb'&&' & \verb'x && y' & 若 \verb'x' 与 \verb'y' 都为
         真, 则为 1, 否则为 0 \\
         数组成员匹配 & \verb'in' & \verb' i in a' & 如果 \verb'a[i]' 存在,
@@ -1367,6 +1368,7 @@ England	94	56	Europe
         字段 & \verb'$' & \verb'$i+1' & 1 加上第 \verb'i' 个字段的值 \\
         组合 & \verb'( )' & \verb'($i)++' & 给第 \verb'i' 个字段的值加 1 \\
         \hline
+        \end{tabular}
     \end{center}
 \end{figure}
 
