review stops at 47/210 pages

--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -1327,15 +1327,15 @@ England 94      56      Europe
 打印第 1 个字段的字符串值; 于是, 输出与输入是一样的.
 
 未初始化的变量默认初始值为数值 0 或空字符串 \verb'""'.
-不存在或显式为空的字段具有字符串值 \verb'""', 它们不是数值, 但是当强制
+不存在, 或显式为空的字段具有字符串值 \verb'""', 它们不是数值, 但是当强制
 转换为数值时, 将会是 0. 我们将在本节的末尾看到, 数组的下标是字符串.
 
 有两种惯用语法可以将表达式从一种类型转换成另一种类型:
-\begin{pattern}
-    \textit{number} \verb'""'   将空字符串拼接到 \textit{number} 可以将它
-    强制转换成字符串;
-    \textit{string} \verb'+ 0'  给字符串加上零可以把它强制转换成数值.
-\end{pattern}
+\begin{tabbing}
+    \indent\textit{number} \verb'""'  \hspace{2em} \= 将空字符串拼接到
+    \textit{number} 可以将它强制转换成字符串; \\
+    \indent\textit{string} \verb'+ 0'  \> 给字符串加上零可以把它强制转换成数值.
+\end{tabbing}
 于是, 为了强制让两个字段之间的比较按照字符串来进行, 我们可以把其中一个字段
 强制转换成字符串:
 \begin{awkcode}
@@ -1347,7 +1347,7 @@ England 94      56      Europe
 \end{awkcode}
 无论字段包含什么内容, 这个方式总能奏效.
 
-字符串的数值类型的值, 等于字符串最长的看起来像数值的前缀的值. 于是
+字符串的数值类型的值, 等于字符串中最长的看起来像数值的前缀的值. 于是
 \begin{awkcode}
     BEGIN { print "1E2"+0, "12E"+0, "E12"+0, "1X2Y3"+0 }
 \end{awkcode}
@@ -1368,9 +1368,10 @@ England 94      56      Europe
 \end{file}
 \marginpar{46}
 向 \verb'OFMT' 赋予新值就可以修改它的默认值. 比如将 \verb'OFMT' 改为
-\verb'"%.2f"', 那么在打印数值, 以及强制转换而成的数值之间进行比较时, 小数
-点后将会保留两位小数.
+\verb'"%.2f"', 那么在打印数值, 以及通过强制转换而得到的数值之间进行比较时, 
+小数点后将会保留两位小数.
 \begin{figure}[ht]
+    \captionsetup{type=table}
     \caption{表达式运算符}
     \label{tbl:expression_operators}
     \begin{center}
@@ -1409,15 +1410,16 @@ England 94      56      Europe
 
 \emph{运算符的总结} (\emph{Summary of Operators}). 可以出现在表达式中的运算
 符全部列在了表 \ref{tbl:expression_operators} 中. 将这些运算符应用到常量,
-变量, 字段, 数组元素, 函数, 和其他表达式中, 就可以构造一个表达式.
+变量, 字段, 数组元素, 函数, 和其他表达式中, 就可以构造出一个表达式.
 
-运算符按照优先级的升序排列. 优先级高的运算符优先求值; 举例来说, 在表达式
-中, 乘法运算在加法运算之前求值. 所有的运算符都是左结合的, 除了赋值运算符,
+运算符按照优先级的升序排列. 优先级高的运算符优先求值; 举例来说,
+乘法运算在加法运算之前求值. 所有的运算符都是左结合的, 除了赋值运算符,
 条件运算符, 指数运算, 它们都是右结合的. 左结合性意味着相同优先级的运算符
 按照从左到右的顺序进行运算; 于是 \verb'3-2-1' 是指 \verb'(3-2)-1', 而不是 
 \verb'3-(2-1)'.
 
-因为没有显式的拼接运算符, 比较明智的做法是拼接运算中, 将涉及到其他运算的
+因为没有显式的拼接运算符, 所以比较明智的做法是, 在拼接运算中,
+将涉及到其他运算的
 \marginpar{47}
 表达式用括号括起来. 考虑下面这个程序
 \begin{awkcode}
@@ -1431,4 +1433,4 @@ England 94      56      Europe
 \begin{awkcode}
     $1 < 0 { print "abs($1) =", -$1 }
 \end{awkcode}
-都可以得到我们期望的效果.
+都可以得到我们想要的效果.
