get syntax right to 78/210 pages

--- a/data_processing.tex
+++ b/data_processing.tex
@@ -561,7 +561,7 @@ Awk 的另一个常用功能是数据验证: 确保数据是合法的, 或至少
     END     { if (p != 0) print "missing .P2 at end" }
 \end{awkcode}
 如果分隔符按照正确的顺序出现, 那么变量 \verb'p' 就会按照 \texttt{0 1 0 1 0
-\cdots 1 0}, 否则, 一条错误消息被打印出来, 消息含有发生错误时, 当前输入行
+... 1 0}, 否则, 一条错误消息被打印出来, 消息含有发生错误时, 当前输入行
 所在的行号.
 \marginpar{78}
 
