review stop at 78/210 pages

--- a/data_processing.tex
+++ b/data_processing.tex
@@ -534,7 +534,7 @@ Awk 的另一个常用功能是数据验证: 确保数据是合法的, 或至少
 同样, 我们把数值看成是仅由数字构成的序列, 可能有前导符号, 如果想让这个判断
 更加完整, 请参考 \ref{sec:patterns} 节关于正则表达式的讨论.
 
-\subsection{完整的分隔符}
+\subsection{对称的分隔符}
 \label{subsec:balanced_delimiters}
 
 本书有一个机器可读的版本, 在该版本中, 每一个程序都由一种特殊行开始,
@@ -563,8 +563,8 @@ Awk 的另一个常用功能是数据验证: 确保数据是合法的, 或至少
     END     { if (p != 0) print "missing .P2 at end" }
 \end{awkcode}
 如果分隔符按照正确的顺序出现, 那么变量 \verb'p' 就会按照 \texttt{0 1 0 1 0
-... 1 0}, 否则, 一条错误消息被打印出来, 消息含有发生错误时, 当前输入行
-所在的行号.
+... 1 0} 的规律变化, 否则, 一条错误消息被打印出来, 消息含有发生错误时,
+当前输入行 所在的行号.
 \marginpar{78}
 
 \begin{exercise}
