--- a/data_processing.tex
+++ b/data_processing.tex
@@ -1057,10 +1057,10 @@ the value it corresponds to, but they are not otherwise connected.}.
 \end{shell}
 
 程序非常简单, 只要输入数据格式正确, 不管记录中的项目以何种顺序出现, 程序 
-都能正确得工作. 但是程序也很脆弱, 它需要非常认真的初始化, 以及对文件结束
+都能正确得工作. 但是程序也很脆弱, 它需要非常认真得初始化, 以及对文件结束
 标志的处理. 我们还有另一种方案可供选择, 那就是一次读取一条记录, 当需要时
 再对记录的项目进行挑选. 下面的程序也是对存款与支票进行求和, 但它使用了一
-个函数, 这个函数提取指定名字的项目的值:
+个函数, 这个函数提取具有指定名字的项目的值:
 \begin{awkcode}
     # check2 - print total deposits and checks
 
