get syntax right up to 88/210 pages

--- a/data_processing.tex
+++ b/data_processing.tex
@@ -1116,7 +1116,7 @@ the value it corresponds to, but they are not otherwise connected.}.
 
 \begin{exercise}
     写一个命令 \texttt{lookup}\ \textit{x}\ \textit{y}, 该命令从已知的文件
-中打印所有符合条件的多行记录, 条件是记录含有名字为 \texttt[x} 且值为
+中打印所有符合条件的多行记录, 条件是记录含有名字为 \texttt{x} 且值为
     \textit{y} 项.
 \end{exercise}
 
