review stop at 88/210 pages

--- a/data_processing.tex
+++ b/data_processing.tex
@@ -1117,8 +1117,8 @@ the value it corresponds to, but they are not otherwise connected.}.
 
 \begin{exercise}
     写一个命令 \texttt{lookup}\ \textit{x}\ \textit{y}, 该命令从已知的文件
-中打印所有符合条件的多行记录, 条件是记录含有名字为 \texttt{x} 且值为
-    \textit{y} 项.
+中打印所有符合条件的多行记录, 条件是记录含有名字为 \textit{x} 且值为
+    \textit{y} 的项.
 \end{exercise}
 
 \section{小结}
@@ -1126,8 +1126,8 @@ the value it corresponds to, but they are not otherwise connected.}.
 
 在这一章, 我们展示了多种不同种类的数据处理程序, 它们包括: 从地址薄中获取
 信息, 从数值数据中计算简单的统计信息, 检查程序或数据的有效性, 等等.
-使用 awk 完成这些工作非常简单, 其中原因是多方面的. \patact 模型非常适合
-这种类型的工作, 可调整的字段与记录分隔符可以适应不同格式与开关的输入数据,
+使用 awk 完成这些工作非常简单, 其中原因是多方面的: \patact 模型非常适合
+这种类型的工作, 可调整的字段与记录分隔符可以适应不同格式与形状的输入数据,
 关联数组无论是存储数值, 还是字符串都非常方便, 像 \verb'split' 与 
 \verb'substr' 这样的函数擅长于文本数据的挑选, 而 \printf 则是一个灵活的
-格式化工具. 在下面的章节里, 我们将会看到许多这方面的应用.
+格式化工具. 在下面的章节里, 我们将会看到这些功能的更进一步的应用.
