--- a/awk.tex
+++ b/awk.tex
@@ -15,6 +15,7 @@
 \include{an_awk_tutorial}
 \include{the_awk_language}
 \include{data_processing}
+\include{reports_and_databases}
 
 \backmatter
 
