--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -4,7 +4,7 @@
 \marginpar{89}
 这章展示如何使用 awk 从文件中提取信息, 并生成报表, 我们把重点放在表格数据,
 但是同样的技术也可以用在更加复杂的输入格式上. 本章的主题是开发一个可以与
-其他程序配合使用的程序, 我们将会看到大量的, 工作中会经常遇到的数据处理问题,
+其他程序配合使用的程序. 我们将会看到大量的工作中会经常遇到的数据处理问题,
 这些问题很难一步解决, 但是如果多次遍历数据, 就相对比较容易一些.
 
 本章的第一部分讨论如何扫描单个文件来生成报表, 虽然报表的最终格式的确需要花点
@@ -18,7 +18,7 @@
 Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 我们将使用一个
 三步骤过程来生成报表: 准备, 排序, 格式化. 准备步骤包括选择数据, 可能的话
 还会对数据进行一些运算, 进而得到期望的信息; 如果我们想让数据按照某种特定
-顺序排列, 就必须使用排序步骤, 排序操作可以通过将准备阶段的输出输送给系统
+的顺序排列, 就必须使用排序步骤, 排序操作可以通过将准备阶段的输出输送给系统
 的排序命令来完成; 格式化操作由第 2 个 awk 程序来完成, 它根据已排序的数据
 生成报表. 为了详细说明, 在这一节 我们利用第 \ref{chap:the_awk_language} 
 章的文件\filename{countries} 来生成几张报表.
