--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -190,4 +190,4 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
 
 典型的商业报表比我们现在看到的具有更多的内容 (至少在形式上), 为了详细说明,
 假设我们需要为每一个大洲作一个小计, 以及计算每一个国家占总人口与总面积的
-比重, 我们可以需要新增一个标题, 以及更多的列表头:
+比重, 我们需要新增一个标题, 以及更多的列表头:
