缩小中文等宽字体, 缩放比例为 90%

--- a/preamble.tex
+++ b/preamble.tex
@@ -44,7 +44,7 @@
 % from package fontspec and xeCJK
 \setCJKmainfont{AR PL KaitiM GB}
 \setCJKsansfont{WenQuanYi Zen Hei}
-\setCJKmonofont{AR PLBaosong2GBK Light}
+\setCJKmonofont[Scale=0.9]{AR PLBaosong2GBK Light}
 \setmainfont{Century Schoolbook L}
 \setsansfont{FreeSans}
 % "Mapping={}" make quote symbol straight
