get syntax up to 96/210 pages

--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -347,7 +347,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 are, then do the positioning for you.}. 为打印机写一个 awk 程序, 该程序
 对简单的表格进行格式化 ---- 这是一种可行的做法, 我们待会儿再回来讨论.
 因为用的是 Unix 系统与排版程序, 所以我们可以用一些已经存在的工具 ----
-\texttt}{tbl} 程序可以对表格进行格式化. 程序 \verb'form4' 非常类似于
+\texttt{tbl} 程序可以对表格进行格式化. 程序 \verb'form4' 非常类似于
 \verb'form3', 但是它没有用于控制列宽度的魔数, 相反, 它生成了一些 
 \texttt{tbl} 命令与表格数据, 不同列的数据之间用制表符分隔, 剩下的工作
 由 \texttt{tbl} 完成. (如果你对 \texttt{tbl} 不太熟悉, 那么你可以忽略
