--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -406,5 +406,65 @@ are, then do the positioning for you.}. 为打印机写一个 awk 程序, 该程
         print ".T&\nl l n n n n n."
     }
 \end{awkcode}
-
 \marginpar{97}
+如果把 \verb'form4' 的输出输送给 \verb'tbl', 输出的表格是:
+% TODO
+\begin{shell}
+\end{shell}
+
+如果可能的话, 我们建议构造一个程序来格式化表格, 实现一个像 \verb'tbl' 这样 
+复杂的程序的确很有野心, 但不妨让我们从一个小程序开始: 这个程序以左对齐的
+方式在列中打印项目, 如果是数值, 则右对齐, 并且在同一列中, 每一行的列宽度
+都是相同的 (都等于该列宽度的最大值). 如果给定头部与输入文件
+\filename{countries}, 程序的输出是:
+\begin{shell}
+    USSR      8649    275   Asia         
+    Canada    3852     25   North America
+    China     3705   1032   Asia         
+    USA       3615    237   North America
+    Brazil    3286    134   South America
+    India     1267    746   Asia         
+    Mexico     762     78   North America
+    France     211     55   Europe       
+    Japan      144    120   Asia         
+    Germany     96     61   Europe       
+    England     94     56   Europe       
+\end{shell}
+
+程序的实现代码非常紧凑:
+\marginpar{98}
+\begin{awkcode}
+    # table - simple table formatter
+
+    BEGIN {
+        FS = "\t"; blanks = sprintf("%100s", " ")
+        number = "^[+-]?([0-9]+[.]?[0-9]*|[.][0-9]+)$"
+    }
+
+    {   row[NR] = $0
+        for (i = 1; i <= NF; i++) {
+            if ($i ~ number)
+                nwid[i] = max(nwid[i], length($i))
+            wid[i] = max(wid[i], length($i))
+        }
+    }
+
+    END {
+        for (r = 1; r <= NR; r++) {
+            n = split(row[r], d)
+            for (i = 1; i <= n; i++) {
+                sep = (i < n) ? "   " : "\n"
+                if (d[i] ~ number)
+                    printf("%" wid[i] "s%s", numjust(i,d[i]), sep)
+                else
+                    printf("%-" wid[i] "s%s", d[i], sep)
+            }
+        }
+    }
+
+    function max(x, y) { return (x > y) ? x : y }
+
+    function numjust(n, s) {   # position s in field n
+        return s substr(blanks, 1, int((wid[n]-nwid[n])/2))
+    }
+\end{awkcode}
